# Prompt-Optimizer

./: .gitignore  CONTRIBUTING.md  CUSTOMER_SERVICE_TEST_GUIDE.md  DETAILED_LLD_ANALYSIS.md  GEPA_LIBRARY_DEEP_DIVE.md  LICENSE  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_customer_service_optimization.py  test_customer_service_simple.py  test_data_loading.py  test_enhanced_logging.py  test_evaluation_metrics.py  test_reflection_logging.py  test_text_generation.py  test_ui_optimization.py  verify_implementation.py
docs/: Architecture.md  README.md  SUMMARY.md  architecture_diagrams.md  clean_architecture_diagram.md
docs/api-reference/: README.md
docs/architecture/: README.md
docs/contributing/: README.md
docs/examples/: README.md
docs/getting-started/: README.md  basic-usage.md  installation.md  quick-start.md
docs/tutorials/: README.md  customer-service-optimization.md  text-generation-optimization.md  ui-tree-extraction.md
examples/: README.md  advanced_usage.py  basic_usage.py  cli_usage.md  gemini_usage.py
gepa_optimizer/: __init__.py  cli.py  version.py
gepa_optimizer/core/: __init__.py  base_adapter.py  custom_adapter.py  optimizer.py  result.py  universal_adapter.py
gepa_optimizer/data/: __init__.py  converters.py  loaders.py  validators.py
gepa_optimizer/evaluation/: __init__.py  base_evaluator.py  ui_evaluator.py
gepa_optimizer/llms/: __init__.py  base_llm.py  vision_llm.py
gepa_optimizer/models/: __init__.py  config.py  dataset.py  result.py
gepa_optimizer/utils/: __init__.py  api_keys.py  exceptions.py  helpers.py  logging.py  metrics.py
tests/: conftest.py  test_api_keys.py  test_gemini_integration.py  test_model_config.py  test_optimizer.py  test_optimizer_integration.py
tests/unit/: test_core_optimizer.py  test_data_converters.py
